# TechstackApi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: manage.py
src/apps/core/: apps.py  model_factories.py  permissions.py  serializer_mixins.py  serializers.py  signals.py  urls.py  utils.py  validators.py  views.py
src/apps/core/serializers/: auth.py  base.py  mixins.py
src/apps/core/tests/: utils.py
src/apps/core/tests/views/: test_group_detail.py  (+2 more)
src/apps/posts/: apps.py  filters.py  model_factories.py  models.py  permissions.py  serializers.py  signals.py  views.py
src/apps/posts/migrations/: 0001_initial.py  0002_alter_post_publish_date.py  0003_reaction_create_date.py  0004_alter_post_tags.py  0005_alter_tag_title.py  0006_remove_reaction_at_most_one_reaction_target_and_more.py  0007_reaction_unique_user_post_comment.py  0008_alter_post_content.py  0009_alter_post_content.py  0010_alter_comment_content_alter_post_content.py  0011_remove_reaction_unique_user_post_comment_and_more.py  0012_remove_reaction_unique_owner_post_comment_and_more.py  0013_alter_tag_title.py  0014_alter_reaction_comment_alter_reaction_post.py  0015_alter_comment_reply_to.py
src/apps/profiles/: apps.py  model_factories.py  models.py  serializers.py  signals.py  urls.py  views.py
src/apps/profiles/migrations/: 0001_initial.py  0002_alter_profile_followers.py  0003_alter_profile_bio.py  0004_rename_user_profile_owner.py  0005_alter_profile_followers.py
src/apps/profiles/tests/: test_models.py
src/techstack_api/: asgi.py  settings.py  urls.py  wsgi.py
(+16 files in other folders)
