[tool.poetry]
name = "techstack-api"
version = "0.1.0"
description = "A Django REST API that serves as the backend for the Techstack blog app."
authors = ["David Semke <david@semke.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.16.0"
python-decouple = "^3.8"
dj-database-url = "^2.3.0"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
